--- a/css/style.css
+++ b/css/style.css
@@ -182,44 +182,50 @@ main {
   }
 }
 
-/*
-body:before {
-   content: '';
-   background: url('../img/fon_main.png');
-   position: fixed;
-   background-repeat: no-repeat;
-   background-size: 100%;
-   background-position: right 50%;
-   z-index: 3;
-}
-*/
-.fon__scroll {
-  -webkit-background-image: url("../img/fon_main.png");
-  -webkit-background-repeat: no-repeat;
-  -webkit-background-attachment: fixed;
-  -webkit-background-position: right 50%;
-  -webkit-background-size: 100%;
-  background-image: url("../img/fon_main.png");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: right 50%;
-  background-size: 100%;
-}
-@media (max-width: 767.98px) {
-  .fon__scroll {
-    -webkit-background-image: url("../img/fon_main.png");
-    -webkit-background-repeat: no-repeat;
-    -webkit-background-attachment: fixed;
-    -webkit-background-position: right 70%;
-    -webkit-background-size: 100%;
-    background-image: url("../img/fon_main.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: right 70%;
-    background-size: 100%;
-  }
+body {
+  position: relative;
 }
 
+body:before {
+  content: "";
+  background: url("../img/fon_main.png") no-repeat center center;
+  position: fixed;
+  background-size: cover;
+  height: 100%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: -1;
+  will-change: transform;
+}
+/*
+.fon__scroll {
+   -webkit-background-image: url('../img/fon_main.png');
+   -webkit-background-repeat: no-repeat;
+   -webkit-background-attachment: fixed;
+   -webkit-background-position: right 50%;
+   -webkit-background-size: 100%;
+   background-image: url('../img/fon_main.png');
+   background-repeat: no-repeat;
+   background-attachment: fixed;
+   background-position: right 50%;
+   background-size: 100%;
+
+   @media (max-width:$md3+px) {
+      -webkit-background-image: url('../img/fon_main.png');
+      -webkit-background-repeat: no-repeat;
+      -webkit-background-attachment: fixed;
+      -webkit-background-position: right 70%;
+      -webkit-background-size: 100%;
+      background-image: url('../img/fon_main.png');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-position: right 70%;
+      background-size: 100%;
+   }
+
+}
+*/
 .main-title {
   padding: 350px 30px 0px 30px;
   position: relative;
@@ -674,9 +680,8 @@ h3 {
   position: fixed;
   margin: 0 auto;
   top: 50%;
-  padding: 20px 40px;
   line-height: 200%;
-  border: 3px solid #4d3e2a;
   border-radius: 30px;
   background: #fff;
+  z-index: 7;
 }
