--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -208,21 +208,21 @@ main {
 body {
    position: relative;
 }
+
 body:before {
    content: '';
    background: url('../img/fon_main.png') no-repeat center center;
    position: fixed;
    background-size: cover;
    height: 100%;
-left: 0;
- top: 0;
+   left: 0;
+   top: 0;
    width: 100%;
    //background-position: right 50%;
    z-index: -1;
    will-change: transform;
-   @media (max-width:$md3+px) {
-     
-   }
+
+   @media (max-width:$md3+px) {}
 }
 
 /*
@@ -254,7 +254,7 @@ left: 0;
 }
 */
 .main-title {
-   padding: 350px 30px 0px 30px;
+   padding: 350px 30px 100px 30px;
    position: relative;
    max-width: 685px;
    height: 100%;
@@ -311,6 +311,9 @@ left: 0;
    @media (max-width:280px) {
       font-size: 100px;
    }
+   @media (max-width:395px) {
+      left: -42%;
+   }
 }
 
 .ilya {
@@ -327,7 +330,12 @@ left: 0;
       top: 12%;
       right: -30%;
    }
-
+   @media (max-width:395px) {
+      left: -42%;
+   }
+   @media (max-width:350px) {
+font-size: 80px;
+   }
 }
 
 .daria {
@@ -346,8 +354,11 @@ left: 0;
    }
 
    @media (max-width:395px) {
-      left: -25%;
+      left: -42%;
    }
+   @media (max-width:350px) {
+      font-size: 80px;
+         }
 }
 
 //======================================
@@ -472,9 +483,11 @@ a {
       font-size: 24px;
    }
 }
+
 button {
-   color:#424745;
+   color: #424745;
 }
+
 .location {
    cursor: pointer;
    display: inline-block;
@@ -697,7 +710,8 @@ h3 {
 
 .quote h2 {
    height: 150px;
-margin: 0px 0px 0px 0px;
+   margin: 0px 0px 0px 0px;
+
    @media (max-width:$md3+px) {
       font-size: 40px;
    }
@@ -714,10 +728,14 @@ margin: 0px 0px 0px 0px;
    position: fixed;
    margin: 0 auto;
    top: 50%;
-   
+
    line-height: 200%;
-   
+
    border-radius: 30px;
    background: #fff;
-z-index: 7;
+   z-index: 7;
+}
+
+.g-form__input-wrapper_hidden input {
+   background: transparent;
 }
