--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -735,7 +735,7 @@ h3 {
    margin-right: -50%;
    transform: translate(-50%, -50%);
    line-height: 200%;
-font-size: 40px;
+   font-size: 40px;
    border-radius: 30px;
    background: #fff;
    z-index: 7;
@@ -747,10 +747,16 @@ font-size: 40px;
 
 .element-animation {
    opacity: 0;
-  transform: translateY(20px);
+   -webkit-transform: translateY(20px);
+   transform: translateY(20px);
 }
+
 .element-animation.element-show {
    opacity: 1;
+   -webkit-transform: translateY(0%);
+   -webkit-transition: all 3.5s;
    transition: all 3.5s;
    transform: translateY(0%);
- }
+}
+//=======================================================
+//для счетчика
