--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,11 @@ body:before {
 }
 @media (max-width: 395px) {
   .h1.and {
+    left: -22%;
+  }
+}
+@media (max-width: 350px) {
+  .h1.and {
     left: -42%;
   }
 }
@@ -311,17 +316,13 @@ body:before {
 @media (max-width: 479.98px) {
   .ilya {
     top: 12%;
-    right: -30%;
-  }
-}
-@media (max-width: 395px) {
-  .ilya {
-    left: -42%;
+    right: -40%;
   }
 }
 @media (max-width: 350px) {
   .ilya {
     font-size: 80px;
+    left: -45%;
   }
 }
 
@@ -344,12 +345,13 @@ body:before {
 }
 @media (max-width: 395px) {
   .daria {
-    left: -42%;
+    left: -32%;
   }
 }
 @media (max-width: 350px) {
   .daria {
     font-size: 80px;
+    left: -45%;
   }
 }
 
@@ -525,6 +527,7 @@ button {
 }
 
 h3 {
+  margin: 0px 0px 30px 0px;
   font-size: 32px;
   color: #424745;
   text-transform: uppercase;
@@ -537,6 +540,10 @@ h3 {
 
 .margin {
   margin: 0 auto 20px;
+}
+
+.counter-img {
+  margin: 50px 0px 40px 0px;
 }
 
 .time-block {
@@ -607,6 +614,63 @@ h3 {
 
 .text-day {
   margin-top: 30px;
+}
+
+.timer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.counter__round {
+  display: block;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  border: 3px solid #c6c1a8;
+  font-size: 45px;
+  font-weight: 900;
+  line-height: 170%;
+}
+@media (max-width: 555px) {
+  .counter__round {
+    height: 70px;
+    width: 70px;
+    line-height: 120%;
+  }
+}
+@media (max-width: 380px) {
+  .counter__round {
+    font-size: 35px;
+    height: 60px;
+    width: 60px;
+  }
+}
+
+.counter__round:not(:last-child) {
+  margin-right: 30px;
+}
+@media (max-width: 555px) {
+  .counter__round:not(:last-child) {
+    margin-right: 15px;
+  }
+}
+
+.label {
+  font-family: "Cormorant-Regular", serif;
+  font-size: 25px;
+  margin: 10px 0px 0px 0px;
+}
+@media (max-width: 380px) {
+  .label {
+    font-size: 20px;
+  }
 }
 
 .g-form__input-wrapper .text {
