--- a/css/style.css
+++ b/css/style.css
@@ -191,10 +191,10 @@ body:before {
   background: url("../img/fon_main.png") no-repeat right bottom;
   position: fixed;
   background-size: cover;
-  height: 100%;
+  height: 100vh;
   right: 0;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
   background-position: right 50%;
   z-index: -1;
   will-change: transform;
