--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -263,6 +263,9 @@ body:before {
    @media (max-width:420px) {
       font-size: 80px;
    }
+   @media (max-width:290px) {
+      font-size: 70px;
+   }
 }
 
 .h1.and {
@@ -290,7 +293,7 @@ body:before {
     left: -4%;
    }
  
-   @media (max-width:420px) {
+   @media (max-width:424px) {
       font-size: 200px;
       left: -14%;
    }
@@ -300,6 +303,9 @@ body:before {
    }
    @media (max-width:360px) {
       left: -20%;
+   }
+   @media (max-width:290px) {
+      left: -40%;
    }
 }
 
@@ -314,11 +320,14 @@ body:before {
    @media (max-width:$md4+px) {
       right: -30%;
    }
+   @media (max-width:424px) {
+      right: -40%;
+   }
    @media (max-width:410px) {
       right: -50%;
    }
-   @media (max-width:350px) {
-      
+   @media (max-width:290px) {
+      right: -70%;
    }
 }
 
@@ -334,12 +343,19 @@ body:before {
       left: -20%;
       top: 60%;
    }
+   @media (max-width:424px) {
+left: -30%;
+top: 45%;
+   }
    @media (max-width:410px) {
       left: -38%;
       top: 45%;
    }
    @media (max-width:350px) {
       left: -42%;
+   }
+   @media (max-width:290px) {
+      left: -62%;
    }
 }
 
