--- a/css/style.css
+++ b/css/style.css
@@ -586,11 +586,12 @@ h3 {
 .time-block::before {
   content: "";
   background: url("../img/sloy_15_167.png") no-repeat;
-  width: 100%;
-  height: 100%;
+  width: 50px;
+  height: 265px;
+  background-size: contain;
   position: absolute;
   left: 0;
-  top: 0;
+  top: 10px;
 }
 
 .time-list {
