--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -389,9 +389,12 @@ top: 45%;
 }
 
 .arrow {
-   width: 52px;
-   height: 45px;
+   
    margin: 0 auto;
+   img {
+      width: 30px;
+      height: 20px;
+   }
 }
 
 h2 {
